<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_host_man_setting_next_step"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/tips_activity_next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:srcCompat="@drawable/ic_navigate_next_black_24dp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/lbl_auction_host_man"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/lbl_auction_host_man"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/btn_host_man_setting_next_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/txt_auction_host_man"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hits_auction_host_man"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/app_desc_text_color"
        android:background="@drawable/sh_text_edit_background"
        android:paddingLeft="@dimen/dp_padding_left_default_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_host_man"
        android:paddingStart="@dimen/dp_padding_left_default_value"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_auction_host_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/txt_auction_host_password"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/txt_auction_host_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/sh_text_edit_background"
        android:ems="10"
        android:hint="@string/hits_auction_host_password"
        android:inputType="textVisiblePassword"
        android:paddingStart="@dimen/dp_padding_left_default_value"
        android:paddingLeft="@dimen/dp_padding_left_default_value"
        android:text=""
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_host_password"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>