...
            android:layout_marginLeft="@dimen/dp_padding_left_default_value"
            android:checked="true"
            android:text="@string/lbl_get_fix_money"
            android:textColor="@color/app_desc_text_color" />

        <EditText
            android:id="@+id/txt_fix_number_money"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/sh_text_edit_background"
            android:ems="10"
...
