...
    <fragment
        android:id="@+id/auctionsListFragment"
        android:name="com.github.xwanlion.lifeauctioneer.view.AuctionsListFragment"
        android:label="@string/txt_activity_list_fragment_title">
        <action
            android:id="@+id/action_auctionsListFragment_to_hostManSettingFragment"
            app:destination="@id/hostManSettingFragment" />
    </fragment>
    <fragment
        android:id="@+id/bidderListFragment"
        android:name="com.github.xwanlion.lifeauctioneer.view.BidderListFragment"
        android:label="BidderListFragment" >
        <action
...
