<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyo_activity_list_item"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="@dimen/dp_margin_default_value"
    android:layout_marginTop="@dimen/dp_margin_default_value"
    android:layout_marginRight="@dimen/dp_margin_default_value"
    android:background="@drawable/ic_list_item_shade_radius">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyo_activity_list_item_panel1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_vertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="700dp"
            app:layout_constraintGuide_end="700dp"
            app:layout_constraintGuide_percent="0.66" />

        <TextView
            android:id="@+id/txt_activity_item_auctioneer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/txt_activity_auctioneer"
            android:textSize="40sp"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_activity_item_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_activity_item_money"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_activity_item_auctioneer"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/txt_activity_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_activity_item_date"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_vertical2"
            app:layout_constraintHorizontal_bias="0.229"
            app:layout_constraintStart_toEndOf="@+id/txt_activity_item_money"
            app:layout_constraintTop_toBottomOf="@+id/txt_activity_item_auctioneer"
            app:layout_constraintVertical_bias="0.185" />

        <ImageButton
            android:id="@+id/btn_to_startup_activity_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/list_item_background_color"
            android:contentDescription="@string/btn_start_activity_list_item"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="@+id/gl_vertical2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_circle_filled_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyo_activity_list_item_panel2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sh_list_item_optional_pannel_radius"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="700dp"
            app:layout_constraintGuide_end="700dp"
            app:layout_constraintGuide_percent="0.66" />

        <ImageButton
            android:id="@+id/btn_del_activity_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/sh_del_list_item_radius"
            android:contentDescription="@string/btn_del_activity_list_item"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_clear_white_24dp" />

        <ImageButton
            android:id="@+id/btn_copy_activity_item"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/sh_copy_list_item_radius"
            android:contentDescription="@string/btn_copy_activity_list_item"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_del_activity_item"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_content_copy_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>