<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyo_recycler_view_add_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_margin_default_value"
    android:layout_marginTop="@dimen/dp_margin_default_value"
    android:layout_marginRight="@dimen/dp_margin_default_value">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6011"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <ImageButton
        android:id="@+id/btn_recycle_view_add_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sh_add_list_item_radius"
        android:contentDescription="@string/btn_add_bidder_tips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>